--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </script>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Seungjae Baek</title>
+  <title>Dokeun Lee</title>
   
-  <meta name="author" content="Seungjae Baek">
+  <meta name="author" content="Dokeun Lee">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
