--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <strong> email: </strong><em> peterehrms{at}unist{dot}ac{dot}kr </em>
               </p>
               <p>
-              I am a master student in the <a href="https://ee.unist.ac.kr/" target="_blank">Department of Electrical Engineering</a> at <a href="https://www.unist.ac.kr/" 
-              target="_blank">Ulsan National University of Science and Technology (UNIST),</a> being advised by Professor <a href="https://rml-unist.notion.site/Robotics-Mobility-Lab-42d2027df6f24b4db38a83f32fc8456a" target="_blank">Jeong hwan Jeon.</a>
+                I received my B.S. and am currently pursuing my M.S. in Department of Electrical Engineering from <a href="https://www.unist.ac.kr/" target="_blank">Ulsan National University of Science and Technology (UNIST)</a>
+                ,</a> being advised by Professor <a href="https://rml-unist.notion.site/Robotics-Mobility-Lab-42d2027df6f24b4db38a83f32fc8456a" target="_blank">Jeong hwan Jeon.</a>
               </p>
               <p>
                 My research focuses on Reinforcement Learning, Learning-Based Control, and Autonomous Driving.
@@ -73,11 +73,11 @@
               <papertitle>Reinforcement Learning-Based Approach for Real-Time Routing in Mobile Markets</papertitle>
               </a>
               <br>
-              <a  target="_blank">Changju Kim</a>, <a  target="_blank">Jungeun Lee</a> <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>, <a href="https://rml-unist.notion.site/Principal-Investigator-a1bf528a7ba94baa8e51729c56362b25" target="_blank">Jeong hwan Jeon</a>
+              <a  target="_blank">Changju Kim</a>, <a  target="_blank">Jungeun Lee</a>, <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>, <a href="https://rml-unist.notion.site/Principal-Investigator-a1bf528a7ba94baa8e51729c56362b25" target="_blank">Jeong hwan Jeon</a>
               <br>
-              <em> 2025년 대한전자공학회 하계학술대회</em>
+              <em> Summer Annual Conference of IEIE, 2025</em>
               <br>
-                <a href="https://scholarworks.unist.ac.kr/handle/201301/87446" target="_blank">paper</a>
+                <a href="https://scholarworks.unist.ac.kr/handle/201301/87446" target="_blank">Paper</a>
             </td>
           </tr>
         
@@ -96,7 +96,7 @@
               <img src="images/VTGAR.gif" alt="" width="160" style="border-style: none">
             </td> 
             <td width="75%" valign="middle">
-                <papertitle>Attention-Based Reinforcement Learning for Path Following in Autonmous Driving (tentative title)</papertitle>
+                <papertitle>Attention-Based Reinforcement Learning for Path Following in Autonmous Driving</papertitle>
               </a>
               <br>
               <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>, <a  target="_blank">Jeonghwan Song</a>, <a  target="_blank">Kyeongmin Do</a>, <a>Jeong hwan Jeon</a>
