--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 	          <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/VTGAR.gif" alt="" width="160" style="border-style: none">
+              <img src="images/CARLA.png" alt="" width="160" style="border-style: none">
             </td> 
             <td width="75%" valign="middle">
                 <papertitle>Attention-Based Reinforcement Learning for Path Following in Autonmous Driving</papertitle>
@@ -178,6 +178,8 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="75%" valign="center">
+              Academic Honors (Spring 2022, Spring 2023, Spring 2024)
+              <br>
               Government-Funded Graduate Scholarship (Full-funded)
               <br>
               UNIST Academic Performance Scholarship (4-Year Full-funded)
