--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <strong> email: </strong><em> peterehrms{at}unist{dot}ac{dot}kr </em>
               </p>
               <p>
-                I received my B.S. and am currently pursuing my M.S. in Department of Electrical Engineering from <a href="https://www.unist.ac.kr/" target="_blank">Ulsan National University of Science and Technology (UNIST)</a>
+                I received my B.S. and am currently pursuing my M.S. in Department of Electrical Engineering from <a href="https://www.unist.ac.kr/" target="_blank">Ulsan National Institute of Science and Technology (UNIST)</a>
                 ,</a> being advised by Professor <a href="https://rml-unist.notion.site/Robotics-Mobility-Lab-42d2027df6f24b4db38a83f32fc8456a" target="_blank">Jeong hwan Jeon.</a>
               </p>
               <p>
