Edit some codes

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
               <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">GitHub</a> 
             </td>
           </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/drlrobot.png" alt="" width="160" style="border-style: none">
+            </td> 
+            <td width="75%" valign="middle">
+                <papertitle>Deep Reinforcement Learning for Multi-Tasking Robotic Arms in Isaac Gym</papertitle>
+              </a>
+              <br>
+              <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>, <a>Jeong hwan Jeon</a>
+              <br>
+              <em> Undergraduate Research Project </em>
+              <br>
+            </td>
+          </tr>
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/f1tenth.gif" alt="" width="160" style="border-style: none">
