--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/drlrobot.png" alt="" width="160" style="border-style: none">
+              <img src="images/drl.png" alt="" width="160" style="border-style: none">
             </td> 
             <td width="75%" valign="middle">
                 <papertitle>Deep Reinforcement Learning for Multi-Tasking Robotic Arms in Isaac Gym</papertitle>
