--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
               <papertitle>Attention-Based Reinforcement Learning for Context-Aware Path Tracking Control</papertitle>
               </a>
               <br>
-              <strong><a  target="_blank">Dokeun Lee</a><strong>, <a  target="_blank">Jeonghwan Song</a>, <a  target="_blank">Hyojae Lee</a>, <a  target="_blank">Jeong hwan Jeon</a>
+              <strong><a>Dokeun Lee</a></strong>, <a>Jeonghwan Song</a>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a>
               <br>
-              <em> Preprints</em>
+              <em> Preprints </em>
               <br>
             </td>
           </tr>
@@ -172,7 +172,7 @@
               <br>
               <strong><a>Dokeun Lee</a></strong>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a>
               <br>
-              <em> Application </em>
+              <em> Application, 2025.08.11 </em>
               <br>
             </td>
           </tr>
