--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <br>
               <strong><a>Dokeun Lee</a></strong>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a>
               <br>
-              <em> Application, 2025.08.11 </em>
+              <em> Application, Aug.2025 </em>
               <br>
             </td>
           </tr>
