--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <papertitle>Reinforcement Learning-Based Approach for Real-Time Routing in Mobile Markets</papertitle>
               </a>
               <br>
-              <a  target="_blank">Changju Kim</a>, <a  target="_blank">Jungeun Lee</a>, <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>, <a href="https://rml-unist.notion.site/Principal-Investigator-a1bf528a7ba94baa8e51729c56362b25" target="_blank">Jeong hwan Jeon</a>
+              <a  target="_blank">Changju Kim</a>, <a  target="_blank">Jungeun Lee</a>, <strong><a>Dokeun Lee</a></strong>, <a  target="_blank">Jeong hwan Jeon</a>
               <br>
               <em> Summer Annual Conference of IEIE, 2025</em>
               <br>
@@ -106,6 +106,23 @@
         </tbody></table>  
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ETD.png" alt="" width="160" style="border-style: none">
+            </td> 
+            <td width="75%" valign="middle">
+                <papertitle>2025 Autonomous Driving AI Challenge </papertitle>
+              </a>
+              <br>
+              <a>Jeonghwan Song</a>, <strong><a>Dokeun Lee</a></strong>, <a>Hyojae Lee</a>
+              <br>
+              <br>
+              <em> 3rd place in Trajectory Prediction </em>
+              <br>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/AIRobot.png" alt="" width="160" style="border-style: none">
@@ -114,7 +131,7 @@
                 <papertitle>Demonstrating a Vision-Based AI Robot for Strategic Board Games </papertitle>
               </a>
               <br>
-              <a  target="_blank">Taehwan Kim</a>*, <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>*, <a  target="_blank">Seonghyeon Kim</a>*, <a  target="_blank">Yongjun Choi</a>*, <a  target="_blank">Sungjun Heo</a>, <a  target="_blank">Thi Thuy Ngan Duong</a>, <a  target="_blank">Kyungdon Joo</a>, <a  target="_blank">Namhun Kim</a>, <a>Jeong hwan Jeon</a>, <a  target="_blank">Hyemin Ahn</a>
+              <a  target="_blank">Taehwan Kim</a>*, <strong><a>Dokeun Lee</a></strong>*, <a  target="_blank">Seonghyeon Kim</a>*, <a  target="_blank">Yongjun Choi</a>*, <a  target="_blank">Sungjun Heo</a>, <a  target="_blank">Thi Thuy Ngan Duong</a>, <a  target="_blank">Kyungdon Joo</a>, <a  target="_blank">Namhun Kim</a>, <a>Jeong hwan Jeon</a>, <a  target="_blank">Hyemin Ahn</a>
               <br>
               (*: Equal Contributions)
               <br>
@@ -132,7 +149,7 @@
                 <papertitle>Deep Reinforcement Learning for Multi-Tasking Robotic Arms in Isaac Gym</papertitle>
               </a>
               <br>
-              <strong><a href="leedokeun.github.io" target="_blank">Dokeun Lee</a></strong>, <a>Jeong hwan Jeon</a>
+              <strong><a>Dokeun Lee</a></strong>, <a>Jeong hwan Jeon</a>
               <br>
               <em> Undergraduate Research Project </em>
               <br>
@@ -170,7 +187,7 @@
                 <papertitle>System and Method for End-to-End Autonomous Driving Using a Reinforcement Learning-Based Control</papertitle>
               </a>
               <br>
-              <strong><a>Dokeun Lee</a></strong>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a>
+              <a>Jeong hwan Jeon</a>, <strong><a>Dokeun Lee</a></strong>, <a>Hyojae Lee</a>
               <br>
               <em> Application, Aug. 2025 </em>
               <br>
