--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/ETD.png" alt="" width="160" style="border-style: none">
+              <img src="images/ETD.png" alt="" width="160" height="100" style="border-style: none">
             </td> 
             <td width="75%" valign="middle">
                 <papertitle>2025 Autonomous Driving AI Challenge </papertitle>
               </a>
               <br>
-              <a>Jeonghwan Song</a>, <strong><a>Dokeun Lee</a></strong>, <a>Hyojae Lee</a>
+              <a>Jeonghwan Song</a>, <strong><a>Dokeun Lee</a></strong>, <a>Kyeongmin Do</a>
               <br>
               <br>
-              <em> 3rd place in Trajectory Prediction </em>
+              <em> 3rd place in Vehicle Trajectory Prediction </em>
               <br>
             </td>
           </tr>
