--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
               </a>
               <br>
               <a>Jeonghwan Song</a>, <strong><a>Dokeun Lee</a></strong>, <a>Kyeongmin Do</a>
+              <br>        
               <br>
-              <br>
-              <em> 3rd place in Vehicle Trajectory Prediction </em>
+              <em> 3rd place in Vehicle Trajectory Prediction, Sep. 2025 - Oct. 2025 </em>
               <br>
             </td>
           </tr>
