--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
               <br>
             </td>
           </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/AIRobot.png" alt="" width="160" style="border-style: none">
+            </td> 
+            <td width="75%" valign="middle">
+                <papertitle>Demonstrating a Vision-Based AI Robot for Strategic Board Games </papertitle>
+              </a>
+              <br>
+              <a  target="_blank">Taehwan Kim</a>*, <strong><a>Dokeun Lee</a></strong>*, <a  target="_blank">Seonghyeon Kim</a>*, <a  target="_blank">Yongjun Choi</a>*, <a  target="_blank">Sungjun Heo</a>, <a  target="_blank">Thi Thuy Ngan Duong</a>, <a  target="_blank">Kyungdon Joo</a>, <a  target="_blank">Namhun Kim</a>, <a>Jeong hwan Jeon</a>, <a  target="_blank">Hyemin Ahn</a>
+              <br>
+              (*: Equal Contributions)
+              <br>
+              <em> Preprints </em>
+              <br>
+              <a href="https://sites.google.com/view/gomoku-robot/" id="" target="_blank">Homepage</a> |   
+              <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">GitHub</a> 
+            </td>
+          </tr>
 	        <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/IEIE2025.png" alt="" width="160" style="border-style: none">
@@ -115,31 +133,14 @@
                 <papertitle>2025 Autonomous Driving AI Challenge </papertitle>
               </a>
               <br>
-              <a>Jeonghwan Song</a>, <strong><a>Dokeun Lee</a></strong>, <a>Kyeongmin Do</a>
+              <a>Jeonghwan Song</a>, <a>Kyeongmin Do</a>, <strong><a>Dokeun Lee</a></strong>
               <br>        
-              <em> 3rd place in Vehicle Trajectory Prediction, Sep. 2025 - Oct. 2025 </em>
+              <em> 3rd place in Vehicle Trajectory Prediction, Aug. 2025 - Oct. 2025 </em>
               <br>
+              <a href="https://www.yna.co.kr/view/PYH20251114098500013" id="" target="_blank">News</a>
             </td>
           </tr>
 
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/AIRobot.png" alt="" width="160" style="border-style: none">
-            </td> 
-            <td width="75%" valign="middle">
-                <papertitle>Demonstrating a Vision-Based AI Robot for Strategic Board Games </papertitle>
-              </a>
-              <br>
-              <a  target="_blank">Taehwan Kim</a>*, <strong><a>Dokeun Lee</a></strong>*, <a  target="_blank">Seonghyeon Kim</a>*, <a  target="_blank">Yongjun Choi</a>*, <a  target="_blank">Sungjun Heo</a>, <a  target="_blank">Thi Thuy Ngan Duong</a>, <a  target="_blank">Kyungdon Joo</a>, <a  target="_blank">Namhun Kim</a>, <a>Jeong hwan Jeon</a>, <a  target="_blank">Hyemin Ahn</a>
-              <br>
-              (*: Equal Contributions)
-              <br>
-              <em> Preprints </em>
-              <br>
-              <a href="https://sites.google.com/view/gomoku-robot/" id="" target="_blank">Homepage</a> |   
-              <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">GitHub</a> 
-            </td>
-          </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/drl.png" alt="" width="160" style="border-style: none">
@@ -231,6 +232,8 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="75%" valign="center">
+              3rd Place in Vehicle Trajectory Prediction, 2025 Autonomous Driving AI Challenge (1,500,000 KRW Prize)
+              <br>
               Academic Honors (Spring 2022, Spring 2023, Spring 2024)
               <br>
               Government-Funded Graduate Scholarship (Full-funded)
