--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
             </td> 
             <td width="75%" valign="middle">
               
-              <papertitle>Attention-Based Reinforcement Learning for Context-Aware Path Tracking Control</papertitle>
+              <papertitle>First Author. Manuscript of Reinforcement Learning for Control</papertitle>
               </a>
               <br>
-              <strong><a>Dokeun Lee</a></strong>, <a>Jeonghwan Song</a>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a>
+              <!-- <strong><a>Dokeun Lee</a></strong>, <a>Jeonghwan Song</a>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a> -->
+              Under Double-Blind Review
               <br>
-              <em> Preprints </em>
+              <em> Submitted to IEEE Intelligent Vehicles Symposium (IV) 2026 </em>
               <br>
             </td>
           </tr>
