--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <br>        
               <em> 3rd place in Vehicle Trajectory Prediction, Aug. 2025 - Oct. 2025 </em>
               <br>
-              <a href="https://www.yna.co.kr/view/PYH20251114098500013" id="" target="_blank">News</a>
+              <a href="https://www.korea.kr/docViewer/skin/doc.html?fn=f886a1853d4ffcd8469ccaf650af4950&rs=/docViewer/result/2025.11/14/f886a1853d4ffcd8469ccaf650af4950" id="" target="_blank">News</a>
             </td>
           </tr>
 
