--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               </p>
               
               <p style="text-align:center">
+              <a href="assets/CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
               <a href="https://github.com/leedokeun" target="_blank">GitHub</a> &nbsp/&nbsp
               <a href="https://scholar.google.com/citations?hl=ko&user=Av2i0gwAAAAJ" target="_blank">Google Scholar</a> &nbsp/&nbsp
 	            <a href="https://www.linkedin.com/in/dokeun-lee-763711345/" target="_blank">LinkedIn</a>
@@ -71,13 +72,12 @@
             </td> 
             <td width="75%" valign="middle">
               
-              <papertitle>First Author. Manuscript of Reinforcement Learning for Control</papertitle>
+              <papertitle>Attention-Based Reinforcement Learning for Context-Aware Path Tracking Control</papertitle>
               </a>
               <br>
-              <!-- <strong><a>Dokeun Lee</a></strong>, <a>Jeonghwan Song</a>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a> -->
-              Under Double-Blind Review
+              <strong><a>Dokeun Lee</a></strong>, <a>Jeonghwan Song</a>, <a>Hyojae Lee</a>, <a>Jeong hwan Jeon</a>
               <br>
-              <em> Submitted to IEEE Intelligent Vehicles Symposium (IV) 2026 </em>
+              <em>IEEE Intelligent Vehicles Symposium (IV) 2026</em>
               <br>
             </td>
           </tr>
