--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 ,</a> being advised by Professor <a href="https://rml-unist.notion.site/Robotics-Mobility-Lab-42d2027df6f24b4db38a83f32fc8456a" target="_blank">Jeong hwan Jeon.</a>
               </p>
               <p>
-                My research focuses on Reinforcement Learning, Learning-Based Control, and Autonomous Driving.
+                My research focuses on Reinforcement Learning, Motion Planning, Learning-Based Control, and Autonomous Driving.
               </p>
               
               <p style="text-align:center">
