--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
               <br>
               <em>IEEE Intelligent Vehicles Symposium (IV) 2026</em>
               <br>
+              <a href="" id="" target="_blank">Paper</a> |   
+              <a href="" target="_blank">Code</a> |
+              <a href="https://www.youtube.com/watch?v=mffaAIALpEE" target="_blank">Video</a> |
             </td>
           </tr>
           <tr>
@@ -96,7 +99,7 @@
               <em> Preprints </em>
               <br>
               <a href="https://sites.google.com/view/gomoku-robot/" id="" target="_blank">Homepage</a> |   
-              <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">GitHub</a> 
+              <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">Code</a> 
             </td>
           </tr>
 	        <tr>
