--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <br>
               <a href="" id="" target="_blank">Paper</a> |   
               <a href="" target="_blank">Code</a> |
-              <a href="https://www.youtube.com/watch?v=mffaAIALpEE" target="_blank">Video</a> |
+              <a href="https://www.youtube.com/watch?v=mffaAIALpEE" target="_blank">Video</a>
             </td>
           </tr>
           <tr>
@@ -238,11 +238,11 @@
             <td width="75%" valign="center">
               3rd Place in Vehicle Trajectory Prediction, 2025 Autonomous Driving AI Challenge (1,500,000 KRW Prize)
               <br>
+              Government-funded Graduate Scholarship (2-year, fully funded) — Ministry of Science and ICT (Sep. 2024 – Aug. 2026)
+              <br>
               Academic Honors (Spring 2022, Spring 2023, Spring 2024)
               <br>
-              Government-Funded Graduate Scholarship (Full-funded)
-              <br>
-              UNIST Academic Performance Scholarship (4-Year Full-funded)
+              UNIST Academic Performance Scholarship (3.5-year, fully funded) — UNIST (Feb. 2019 – Aug. 2024)
               <br>
             </td>
           </tr>
