--- a/index.html
+++ b/index.html
@@ -84,24 +84,7 @@
               <a href="https://www.youtube.com/watch?v=mffaAIALpEE" target="_blank">Video</a>
             </td>
           </tr>
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/AIRobot.png" alt="" width="160" style="border-style: none">
-            </td> 
-            <td width="75%" valign="middle">
-                <papertitle>Demonstrating a Vision-Based AI Robot for Strategic Board Games </papertitle>
-              </a>
-              <br>
-              <a  target="_blank">Taehwan Kim</a>*, <strong><a>Dokeun Lee</a></strong>*, <a  target="_blank">Seonghyeon Kim</a>*, <a  target="_blank">Yongjun Choi</a>*, <a  target="_blank">Sungjun Heo</a>, <a  target="_blank">Thi Thuy Ngan Duong</a>, <a  target="_blank">Kyungdon Joo</a>, <a  target="_blank">Namhun Kim</a>, <a>Jeong hwan Jeon</a>, <a  target="_blank">Hyemin Ahn</a>
-              <br>
-              (*: Equal Contributions)
-              <br>
-              <em> Preprints </em>
-              <br>
-              <a href="https://sites.google.com/view/gomoku-robot/" id="" target="_blank">Homepage</a> |   
-              <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">Code</a> 
-            </td>
-          </tr>
+
 	        <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/IEIE2025.png" alt="" width="160" style="border-style: none">
@@ -142,6 +125,39 @@
               <em> 3rd place in Vehicle Trajectory Prediction, Aug. 2025 - Oct. 2025 </em>
               <br>
               <a href="https://www.korea.kr/docViewer/skin/doc.html?fn=f886a1853d4ffcd8469ccaf650af4950&rs=/docViewer/result/2025.11/14/f886a1853d4ffcd8469ccaf650af4950" id="" target="_blank">News</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/IITP.png" alt="" width="160" style="border-style:none;">
+            </td>
+            <td style="width:75%;vertical-align:middle;">
+              <div style="font-weight:700;">
+                Development of Reinforcement Learning-Based Automated Driving AI Software Technology for Optimal Driving Behavior Decision in Hazardous Situations on Congested Roads
+              </div>
+              <div>Development of Reinforcement Learning-Based Controller</div>
+              <div><em>Supported by an IITP grant funded by the Korea government (MSIT)</em></div>
+              <div style="margin-top:6px;"><em>Apr. 2024 - Dec. 2027</em></div>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/AIRobot.png" alt="" width="160" style="border-style: none">
+            </td> 
+            <td width="75%" valign="middle">
+                <papertitle>Demonstrating a Vision-Based AI Robot for Strategic Board Games </papertitle>
+              </a>
+              <br>
+              <a  target="_blank">Taehwan Kim</a>*, <strong><a>Dokeun Lee</a></strong>*, <a  target="_blank">Seonghyeon Kim</a>*, <a  target="_blank">Yongjun Choi</a>*, <a  target="_blank">Sungjun Heo</a>, <a  target="_blank">Thi Thuy Ngan Duong</a>, <a  target="_blank">Kyungdon Joo</a>, <a  target="_blank">Namhun Kim</a>, <a>Jeong hwan Jeon</a>, <a  target="_blank">Hyemin Ahn</a>
+              <br>
+              (*: Equal Contributions)
+              <br>
+              <em> Preprints, Sep. 2024 - Jan. 2025 </em>
+              <br>
+              <a href="https://sites.google.com/view/gomoku-robot/" id="" target="_blank">Homepage</a> |   
+              <a href="https://github.com/hri5-boardgame-robot/Koch_Gomoku_robot" target="_blank">Code</a> 
             </td>
           </tr>
 
