--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
               <div style="font-weight:700;">
                 Development of Reinforcement Learning-Based Automated Driving AI Software Technology for Optimal Driving Behavior Decision in Hazardous Situations on Congested Roads
               </div>
-              <div>Development of Reinforcement Learning-Based Controller</div>
-              <div><em>Supported by an IITP grant funded by the Korea government (MSIT)</em></div>
-              <div style="margin-top:6px;"><em>Apr. 2024 - Dec. 2027</em></div>
+              <div>Developed a Reinforcement Learning-Based Controller</div>
+              <div><em>Supported by IITP grant funded by the Korea government (MSIT), Apr. 2024 - Dec. 2027</em></div>
             </td>
           </tr>
 
